--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Zama Ntombela</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Zama88" target="_blank">Zama Ntombela</a>
+          and is
+          <a href="https://github.com/Zama88/weather-project" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://main--dazzling-klepon-9e81ed.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
