--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
     <title>My weather application</title>
   </head>
   <body>
@@ -42,11 +42,12 @@
           <div class="weather-app-temperature-container">
             <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weatehr-app-unit">°C</div>
+            <div class="weather-app-unit">°C</div>
           </div>
         </div>
         <div class="weather-forecast" id="forecast"></div>
       </main>
+
       <footer>
         <p>
           This project was coded by
@@ -56,9 +57,7 @@
             on GitHub</a
           >
           and
-          <a
-            href="https://main--dazzling-klepon-9e81ed.netlify.app/"
-            target="_blank"
+          <a href="https://imozulu-shecodes-app.netlify.app/" target="_blank"
             >hosted on Netlify</a
           >
         </p>
@@ -66,6 +65,4 @@
     </div>
   </body>
   <script src="src/index.js"></script>
-
-  let forecast= document.querySelector("# forecast"); forecast.innerHTML =
 </html>
